        /etc/apt/apt.conf and /etc/apt/apt.conf.d directories being used,
        while the copies in the chroot filesystem are ignored.
      + Allow arch: all packages to be built when $main::build_arch_all
        is true.
      + Hardware DEBIAN_FRONTEND to "noninteractive" when installing and
        purging packages.
      + Fix support for '~' in version numbers.

 -- Roger Leigh <rleigh@debian.org>  Sun, 27 Nov 2005 11:53:23 +0000

sbuild (0.36) unstable; urgency=low

  Roger Leigh:

  * debian/changelog: Convert to UTF-8.
  * sbuild:
    - Don't fail in the absence of central sourcedeps.  These are no longer
      required now source packages are required to have build dependencies,
      so this should not be fatal.
    - Added support for schroot:
      + Added $conf::chroot_mode.  This may be set to "split" (the
        historical default), or "schroot" (use schroot instead of sudo).
      + All operations using sudo now check the value of $chroot_mode, and
        use sudo or schroot accordingly.
      + When using schroot, %main::dist_order is filled using the schroot
        chroot priorities.
      + Added %main::dist_locations to store the location of the
        available chroots.
    - Print a readable error if a chroot does not exist.
  * debian/control: Update to Standards-Version 3.6.2.
  * debian/copyright: Use the new FSF address.
  * debian/conffiles: Remove.
  * debian/rules:
    - Use debhelper version 4 compatibility mode.
    - Move the find -maxdepth option to before non-option arguments, to
      fix find warnings.
    - Remove template comments.
    - avg-pkg-build-space symbolic link should be relative.

 -- Roger Leigh <rleigh@debian.org>  Sun, 11 Sep 2005 10:02:19 +0100

sbuild (0.35) unstable; urgency=low

  Michael Banck:

  * bin/abort-current-build: Remove the `-B' from the grep line as
    `sbuild -s' does not pass that option to dpkg-configure and abort-
    current-build fails in that case.