@@ -36,6 +36,7 @@ install: build
 
 	$(INSTALL) -m 755 sbuild update-sourcedeps avg-pkg-build-time \
 		$(DESTDIR)/usr/bin/
+	$(INSTALL) -m 644 Sbuild.pm $(DESTDIR)/usr/share/perl5/
 	ln -s avg-pkg-build-time $(DESTDIR)/usr/bin/avg-pkg-build-space
 	$(INSTALL) -m 644 sbuild.conf sbuild.conf.local $(DESTDIR)/etc/
 
