@@ -79,6 +79,7 @@ use GDBM_File;
 use POSIX;
 use FileHandle;
 use Cwd;
+use Sbuild;
 
 $ENV{'LC_ALL'} = "POSIX";
 
@@ -473,7 +474,7 @@ sub fetch_source_files {
 				# day.
 				my $newest = $version;
 				foreach my $entry (keys %entries) {
-					$newest = $entry if version_cmp($entry, '>>', $newest);
+					$newest = $entry if Sbuild::version_compare($entry, '>>', $newest);
 				}
 				if ($newest ne $version) {
 					print PLOG "Version skew. Latest version is $newest, ".
@@ -1567,7 +1568,7 @@ sub filter_dependencies {
 			if ($stat->{'Installed'}) {
 				my ($rel, $vers) = ($dep->{'Rel'}, $dep->{'Version'});
 				my $ivers = $stat->{'Version'};
-				if (!$rel || version_cmp( $ivers, $rel, $vers )){
+				if (!$rel || Sbuild::version_compare( $ivers, $rel, $vers )){
 					print "$name: neg dep, installed, not versioned or ",
 						  "version relation satisfied --> remove\n" if $main::debug;
 					print PLOG "$name: installed (negative dependency)";
@@ -1602,7 +1603,7 @@ sub filter_dependencies {
 				next;
 			}
 			my $ivers = $stat->{'Version'};
-			if (!$rel || version_cmp( $ivers, $rel, $vers )) {
+			if (!$rel || Sbuild::version_compare( $ivers, $rel, $vers )) {
 				print "$name: pos dep, installed, no versioned dep or ",
 					  "version ok\n" if $main::debug;
 				print PLOG "$name: already installed ($ivers";
@@ -1617,7 +1618,7 @@ sub filter_dependencies {
 			print PLOG "$name: non-matching version installed ",
 				  "($ivers ! $rel $vers)\n";
 			if ($rel =~ /^</ ||
-				($rel eq '=' && version_cmp($ivers, '>>', $vers))) {
+				($rel eq '=' && Sbuild::version_compare($ivers, '>>', $vers))) {
 				print "$name: would be a downgrade!\n" if $main::debug;
 				print PLOG "$name: would have to downgrade!\n";
 			}
@@ -1672,7 +1673,7 @@ sub check_dependencies {
 				if (!$dep->{'Rel'}) {
 					$fail .= "$name(still installed) ";
 				}
-				elsif (version_cmp($stat->{'Version'}, $dep->{'Rel'},
+				elsif (Sbuild::version_compare($stat->{'Version'}, $dep->{'Rel'},
 								   $dep->{'Version'})) {
 					$fail .= "$name(inst $stat->{'Version'} $dep->{'Rel'} ".
 							 "conflicted $dep->{'Version'})\n";
@@ -1690,7 +1691,7 @@ sub check_dependencies {
 					$f .= "$name(missing) ";
 				}
 				elsif ($d->{'Rel'} &&
-					   !version_cmp( $stat->{'Version'}, $d->{'Rel'},
+					   !Sbuild::version_compare( $stat->{'Version'}, $d->{'Rel'},
 									 $d->{'Version'} )) {
 					$f =~ s/ $/\|/ if $f;
 					$f .= "$name(inst $stat->{'Version'} ! $d->{'Rel'} ".
@@ -1761,15 +1762,6 @@ sub get_dpkg_status {
 	}
 	close( STATUS );
 	return \%result;
-}
-
-sub version_cmp {
-	my $v1 = shift;
-	my $rel = shift;
-	my $v2 = shift;
-	
-	system "$conf::dpkg", "--compare-versions", $v1, $rel, $v2;
-	return $? == 0;
 }
 
 sub run_script {
